fix: corrected main page plugin links

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -25,7 +25,13 @@ You can find more specific instructions and details of what all the core setting
 For specifics on what each plugin does, please refer to their respective wiki pages:
   * [Explorer](/usage/plugins/explorer)
   * [Botanist](/usage/plugins/botanist)
-  * [BioInsights](/usage/plugins/bioinsights)
+  * [Herald](/usage/plugins/herald)
+  * [BioInsights](/usage/plugins/thirdparty/bioinsights)
+  * [Evaluator](/usage/plugins/thirdparty/evaluator)
+  * [GeoPredictor](/usage/plugins/thirdparty/geopredictor)
+  * [Signal Monitor](/usage/plugins/thirdparty/signalmonitor)
+  * [Telegram](/usage/plugins/thirdparty/telegram)
+  * [fredjk's plugins](/usage/plugins/thirdparty/fredjk-gh)
 
 If you're interested in Custom Criteria for Explorer in particular you can find [the documentation for using them here](/usage/plugins/explorer/customcriteria).
 
