--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,6 +7,19 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest 
 
+### v1.2.10 - Don't Repeat Yourself
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.10/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.10/ObservatoryPortable.zip)
+
+One small feature, some under the hood handling, and a couple of small but important bugfixes. Of note this fixes an issue with repeated notifications being emitted by the [Herald plugin](/release/herald), which provides higher quality voice notifications and is now available for [all patrons](https://patreon.com/vithigar) as well as anyone with their own Azure Cognitive Services account.
+
+- Add right-click context menu to "Core" tab
+- Fix issue where plugins moved to the first tab position could open their context menu
+- Fix issue where notification messages destined for plugins were not properly de-duplicated
+- Add handling of system colonization related journal events
+
 ### v1.2.9 - Trailblazing
 
 Release versions:
