fix: correct prospector link

--- a/pages/usage/plugins.mdx
+++ b/pages/usage/plugins.mdx
@@ -55,7 +55,7 @@ Precise installation instructions can be found for any given plugin on its own p
 
 ### Mining
 
-  * [Prospector](/usage/plugins/thirdparty/prospector): Mining and hotspot information.
+  * [Prospector](/usage/plugins/thirdparty/fredjk-gh#prospector): Mining and hotspot information.
 
 ### Notifications
 
