chore: core 1.3 and herald 2.1

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,6 +7,30 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest 
 
+### v1.3.0 - On Top Of Things
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.3.0/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.3.0/ObservatoryPortable.zip)
+
+Some tidying, some minor features, and some catch-up!
+
+Most notably for users this release adds per-windows "Always On Top" functionality, accessible in the top-left system menu (click the icon in the corner).
+
+Also new is a built-in way for plugins to notify that they have updates available.
+
+For those of you pledged to [my Patreon](https://patreon.com/vithigar) or with your own Azure/OpenAI TTS services this update also coincides with an update to [Observatory Herald](/release/herald) which uses the new plugin update check and improved plugin messaging features to generally improve its user experience.
+
+For plugin authors this version includes the long-awaited refactor of inter-plugin messaging, with thanks to [fredjk-gh](https://github.com/fredjk-gh).
+
+- Add "Always On Top"
+- Add plugin update check
+- Add new core method for plugins to easily display message boxes
+- Add GUIDs to plugin interface for identification
+- Handle new journal events and properties for Vanguards
+- Improvements to inter-plugin messaging
+- Improvements to plugin error handling
+
 ### v1.2.10 - Don't Repeat Yourself
 
 Release versions:
