--- a/pages/release/herald.mdx
+++ b/pages/release/herald.mdx
@@ -7,6 +7,13 @@ description: Plugin for improved voice notifications.
 
 ## Latest 
 
+### v2.1.0
+
+Minor feature release that adds support for the improved messaging and update check in Observatory Core v1.3.0.
+
+Release versions:
+  * [EOP](https://github.com/Xjph/ObservatoryHerald/releases/download/v2.1.0/ObservatoryHerald.eop)
+
 ### v2.0.2 - Herald Two-Point Oh...Two?!
 
 Bugfix release 2.0.2 fixes lack of default selection for API and broken direct Azure support. More general 2.0.x notes below.
