chore: proton version

--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -9,6 +9,14 @@ description: Experimental Builds of Elite Observatory Core
 
 ## Latest 
 
+### v1.3.0 - On Top Of Things
+
+Release versions:
+  * [Installer](https://xjph.net/Observatory/1.3.0/WINE-ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/1.3.0/WINE-ObservatoryPortable.zip)
+
+Please see the [regular release page](/release) for changelogs.
+
 ### v1.2.10 - Don't Repeat Yourself
 Release versions:
   * [Installer](https://xjph.net/Observatory/1.2.10/WINE-ObservatorySetup.exe)
